# minesweeper-openenv

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  test.html
minesweeper_env/: __init__.py  environment.py  models.py
minesweeper_env/server/: __init__.py  app.py
server/: app.py
